--- a/pom.xml
+++ b/pom.xml
@@ -109,5 +109,10 @@
       <version>1.1.2</version>
     </dependency>
   </dependencies>
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.14</version>
+</dependency>
   
 </project>
